# xs-observations

./: .gitignore  CITATION.cff  LICENSE  README.md
dil/: README.md  dil.py  package-lock.json  package.json  pyproject.toml  zmq_dil.py
dil/crawl/: acceptor_state.js  acceptor_test.js  dil.js  dyn.js  locators.js  prepare_states.js  pruner.py  response_collector.js  url_collector.js  utilities.js
dil/data_analysis/: dil_analysis-log.ipynb  dil_analysis.ipynb  helper.py
dil/mojo/: audio_buffered_chromium_Status-Code.mojo  audio_error_chromium_Status-Code.mojo  audio_error_firefox_Status-Code.mojo  audio_events-fired_chromium_Status-Code.mojo  audio_networkState_firefox_Status-Code.mojo  audio_performanceAPI.smooth_chromium_Status-Code.mojo  audio_readyState_chromium_Status-Code.mojo  audio_seekable_chromium_Status-Code.mojo  double-script_win.performanceAPI.smooth_chromium_Status-Code.mojo  embed-img_events-fired_firefox_Status-Code.mojo  embed-img_performanceAPI.smooth_firefox_Status-Code.mojo  embed_el-message_chromium_Status-Code.mojo  embed_el-message_firefox_Status-Code.mojo  embed_events-fired_chromium_Status-Code.mojo  embed_events-fired_firefox_Status-Code.mojo  embed_performanceAPI.smooth_chromium_Status-Code.mojo  embed_performanceAPI.smooth_firefox_Status-Code.mojo  embed_windowHeight_chromium_Status-Code.mojo  fetch-creds-cors-manual_performanceAPI.smooth_firefox_Status-Code.mojo  fetch-creds-no-cors-integrity_performanceAPI.smooth_chromium_Status-Code.mojo  iframe-csp_contentDocument_chromium_Status-Code.mojo  (+69 more)
tbf/: .gitignore  README.md  pyproject.toml
(+1080 files in other folders)
